--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,6 @@ dependencies {
     compile 'in.shadowfax:proswipebutton:1.0.1'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.google.android.gms:play-services-location:11.8.0'
-    compile 'com.google.firebase:firebase-core:11.8.0'
-    compile 'com.google.firebase:firebase-auth:11.8.0'
-    compile 'com.google.firebase:firebase-messaging:11.8.0'
+    compile 'com.google.firebase:firebase-database:11.8.0'
 }
 apply plugin: 'com.google.gms.google-services'
